Controller fenetre d'acceuil